--- a/index.html
+++ b/index.html
@@ -13,10 +13,14 @@
     <h2>Below type in a search and enjoy!</h2>
     <div class="search">
       <form id= "searcQuery">
-        <input type="text" name="query" id="query"placeholder="Search here and enjoy">
+        <input type="text" class="searchForm" id="query" placeholder="Search here and enjoy">
         <input type="submit" value="search" id="button">
       </form>
     </div>
+  </div>
+  <div class="results">
+    <ul>
+    </ul>
   </div>
   <body>
 
